# Mecanica-y-Termodinamica-2024-1C

./: pyproject.toml
guias/10-Primera-Ley-W-Q-y-Energia-Interna/: resumen.html
laboratorios/Labo01/: Meca y Termo - Informe 1(1).docx  Meca y Termo - Informe 1.docx
laboratorios/Labo03-04/: Labo02.ipynb  Meca y Termo - Informe 2.docx  doc_url.txt
laboratorios/Labo04-05/: Labo03.ipynb
laboratorios/Labo04-05/grupo6-resorte/: periodo4.txt  periodo4y5y6.txt  peso2.txt  peso2y2y6.txt  peso4y5.txt  todos.txt
laboratorios/Labo04-05/mediciones/: peso1.csv  peso2.csv  peso5.csv  peso6.csv
laboratorios/Labo05-06/: Labo03.ipynb  Meca y Termo - Informe 3.docx
laboratorios/Labo05-06/grupo6-resorte/: periodo2grande.txt  periodo4y5.txt  periodo4y5y6y2mini.txt  peso2mini.txt  peso2y2.txt  peso2y2y6y4.txt  peso6.txt  sin_peso.txt.txt
laboratorios/Labo05-06/mediciones/: peso4.csv  peso7.csv
