[tool.poetry]
name = "mecanica-y-termodinamica-2024-1c"
version = "0.1.0"
description = ""
authors = ["MatiasMoran <a@a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
